src/grid.less
// This is a adjustable grid system
// By overwriting the variables below you can customise it however you want
// Column width is equal to - X * width / columns + X * gutter width
@grid-columns: 16;
@grid-gutter-width: 20;
@grid-width: 960;

// Set up the container, and everything within it
.container {
	width: @grid-width + 0px;
	margin-left: auto;
	margin-right: auto;
	
	// Column class, used on all column widths
	.columns, .columns {
		float: left;
		display: inline;
		margin-left: @grid-gutter-width / 2 + 0px;
		margin-right: @grid-gutter-width / 2 + 0px;
	}
	
	// Alpha and omega classes for nested columns
	.column.alpha, .columns.alpha {
		margin-left: 0;
	}
	
	.column.omega, .columns.omega {
		margin-left: 0;
	}
}

// Clear the container
// From Skeleton - https://github.com/dhgamache/Skeleton
.container:after {
	content: "\0020";
	display: block;
	height: 0;
	clear: both;
	visibility: hidden;
}

// Clear class for use with br tags
// Also from Skeleton
.clear {
	clear: both;
	display: block;
	overflow: hidden;
	visibility: hidden;
	width: 0;
	height: 0;
}

